# netflix-mock

./: .gitignore  .pre-commit-config.yaml  README.md  dev.env  dev.yaml  er-if.json  features.yaml  logging.conf  main.py  mkdocs.yml  prod.env  pyproject.toml  requirements.txt  requirements_dev.txt
.run/: main.run.xml
config/: dev.env  prod.env
docs/: about.md  audio_streaming.md  deploy.md  develop.md  devpi.md  drawio.md  home.md  index.md  install.md  related.md  video_capture.md  weather.md
docs/audio/: record.md
docs/img/: pytest-pytaf.drawio
docs/routers/: todos.md  users.md
docs/streaming/: audio.md  http_range_request.md  open_cv.md  video.md
docs/video/: capture.md  stream.md
mock_server/: app.py  auth.py  config.py  database.py  db.py  deps.py  main.py  settings.py
mock_server/depends/: app_settings.py  basic_auth.py  db_session.py
mock_server/models/: user.py
mock_server/routers/: config.py  guide.py  home.py  settings.py  user.py  weather.py
mock_server/schemas/: location.py  user.py  weather_status.py
mock_server/services/: user_service.py  weather_service.py
mock_server/templates/: index.html
mock_server/views/: home.py
netflix_mock/: app.py  auth.py  basic_auth.py  config.py  database.py  feature_flags.py  main.py  settings.py
netflix_mock/common/: database.py  responses.py  settings.py
netflix_mock/depends/: basic_auth.py
netflix_mock/middleware/: catch_all.py  http_logging.py  uncaught_exceptions.py  unhandled_exceptions.py
netflix_mock/models/: todo.py  user.py
netflix_mock/routers/: audio.py  catch_all.py  config.py  ef_ir.py  fake.py  files.py  guide.py  home.py  settings.py  streaming.py  templates.py  todos.py  upload.py  user.py  users.py  video.py  weather.py
netflix_mock/schemas/: api_error.py  ef_ir.py  settings.py  success.py  todo.py  user.py  weather_status.py
netflix_mock/services/: fake_service.py  settings_service.py  user_service.py  weather_service.py
netflix_mock/templates/: index.html  video.html
netflix_mock/utils/: database.py  settings.py
netflix_mock/websocket/: echo.py
netflix_mock/ws/: echo.py
pbt/: openapi.json  test_api.py  test_api_asgi.py
templates/: index.html  video.html
tests/: conftest.py  test.yaml  test_api.py  test_auth.py  test_catch_all.py  test_config.py  test_ef_ir.py  test_fake.py  test_feature_flags.py  test_files.py  test_home.py  test_settings.py  test_upload.py  test_user.py  test_weather.py  test_websocket.py  test_ws_echo.py
tests/config/: test.env  test.yaml
tests/other/: test_inheritance.py  test_jsonschema.py  test_pydantic.py
tests/pbt/: test_api.py  test_api_asgi.py
