[tool.poetry]
name = "netflix_mock"
version = "0.1.0"
description = "Quick start for mock implementations."
authors = ["Gerrit Schrader <gerrit.schrader@gmail.com>"]
include = [
    "site/*",
    "site/assets/*",
    "site/assets/images/*",
    "site/assets/javascripts/*",
    "site/assets/javascripts/lunr/*",
    "site/assets/javascripts/lunr/min/*",
    "site/assets/javascripts/workers/*",
    "site/assets/stylesheets/*",
    "site/search/*",
]

[tool.poetry.dependencies]
python = "3.9"
fastapi = "^0.65.0"
typer = "^0.3.2"
SQLAlchemy = "^1.4.15"
httpx = "^0.18.1"
python-dotenv = "^0.17.1"
Jinja2 = "^2.11.3"              # for static files
aiofiles = "^0.7.0"             # for static files
python-multipart = "^0.0.5"     # for file uploads ony
uvicorn = "^0.13.4"             # workaround
async-exit-stack = "^1.0.1"     # for py3.6 compatibility only
async_generator = "^1.10"       # for py3.6 compatibility only
jsf = "^0.3.2"
jsonref = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.5b1"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.4"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"
requests = "^2.25.1"
Faker = "^8.1.4"
pre-commit = "^2.13.0"          # pre-commit hook management
isort = "^5.8.0"
schemathesis = "^3.7.2"
install = "^1.3.4"
flaky = "^3.7.0"

[tool.poetry.scripts]
# netflix_mock = "netflix_mock.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
